# OxiDock

./: PERFORMANCE.md  README.md  SECURITY.md  THUMBNAILS.md  agent_instructions.txt  index.html  package.json  vite.config.ts
.agents/rules/: runtime.md
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  errors.rs  key_store.rs  lib.rs  libvips_test.rs  main.rs  sftp_ops.rs  ssh_manager.rs
src/components/: FileBrowser.tsx  FilePreview.tsx  FolderOptionsPopover.tsx  ImageThumbnail.tsx  ImageViewer.tsx  KeyManager.tsx  ServerList.tsx  ViewOptionsPopover.tsx
src/lib/: dirCache.ts  imageCache.ts  storage.ts  types.ts  useBiometric.ts
src/theme/: ThemeContext.tsx  catppuccin.ts  index.ts  tokyonight.ts
