[package]
name = "oxidock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oxidock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.57"
russh-sftp = "2.1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-process = "2"
fast_image_resize = "6.0.0"
image = { version = "0.25.9", features = ["webp"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
tauri-plugin-mobile-onbackpressed-listener = "2"
